# fastgravity

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  mat2.rs  utils.rs  vec2.rs
